--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ ipykernel = "==5.5.4"
 pygresql = "==5.2.2"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
