--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,16 @@ google-api-python-client = "==2.3.0"
 pandas = "==1.2.4"
 ipykernel = "==5.5.4"
 pygresql = "==5.2.2"
+psycopg2 = "==2.8.6"
+codetiming = "==1.3.0"
 
 [dev-packages]
 black = "*"
+flake8 = "*"
+bandit = "*"
+pydocstyle = "*"
+pylama = "*"
+flake8-spellcheck = "*"
 
 [requires]
 python_version = "3.8"
